--- a/pages/home/login.css
+++ b/pages/home/login.css
@@ -1,7 +1,9 @@
-button{
+/* button{
   background-color: blueviolet;
 }
 
+//crtl+k && ctrl+c
+
 button-md, .button-md:hover:not(.disable-hover) {
   background-color: rebeccapurple;
-}
+} */
